--- a/APP/templates/user/register.html
+++ b/APP/templates/user/register.html
@@ -9,22 +9,27 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>注册</title>
-    <link rel="stylesheet" type="text/css" href="{{ static("user/css/index.css") }}">
+    <link rel="stylesheet" href="../../static/user/css/index.css">
     <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{{ static("public/sweetalert/sweetalert.css") }}">
-    <script src="{{ static("public/sweetalert/sweetalert.min.js") }}"></script>
-    <script src="{{ static("public/sweetalert/zlalert.js") }}"></script>
+    <link rel="stylesheet" href="../../static/public/sweetalert/sweetalert.css">
+    <script src="../../static/public/sweetalert/sweetalert.min.js"></script>
+    <script src="../../static/public/sweetalert/zlalert.js"></script>
+    <script src="../../static/public/js/zlajax.js"></script>
+    <script src="../../static/user/js/common.js"></script>
+    <script src="../../static/user/js/login.js"></script>
+    <script src="../../static/user/js/signup.js"></script>
+
 </head>
 <body>
 <div class="main_contener">
     <div class="col-md-4">
     </div>
     <div class="col-md-4">
-        {#         <span id="return_to_span">{{ return_to }}</span>#}
+        {#<span id="return_to_span">{{ return_to }}</span>#}
         <div class="siup_in_title">
-            {#             <a href="{{ url_for("front.index") }}"><img src="{{ static("front/images/blogin.png") }}" alt=""></a>#}
+            <a href="#">注册<img src="#" alt=""></a>
         </div>
         <div class="modal-content" style="border: none;">
             <div class="col-left"></div>
@@ -34,19 +39,17 @@
                 </div>
                 <div class="modal-body">
                     <section class="box-login v5-input-txt" id="box-login">
-                        <ul>
+                        <ul class="list-unstyled">
                             <li class="form-group">邮箱：
                                 <div class="input-group">
                                     <input type="text" class="form-control" name="email" placeholder="邮箱号码">
                                     <span class="input-group-btn">
-                                            <button class="btn btn-default" id="send-capcha" style="padding: 10px 0px">发送验证码</button>
+                                        <button class="btn btn-default" id="send-capcha">发送验证码</button>
                                     </span>
                                 </div>
                             </li>
                             <li class="form-group">邮箱验证码：<input class="form-control" name="email-captcha"
                                                                 placeholder="请输入邮箱验证码" type="text"></li>
-
-
                             <li class="form-group">密码：<input class="form-control" name="password1"
                                                              placeholder="请输入密码" type="password"></li>
                             <li class="form-group">确认密码：<input class="form-control" name="password2"
@@ -66,7 +69,5 @@
     <div class="col-md-4">
     </div>
 </div>
-
-
 </body>
 </html>
