--- a/APP/templates/user/base.html
+++ b/APP/templates/user/base.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="../../static/user/css/media.css">
     {% block head %}{% endblock %}
 </head>
-{% if g.front_user %}
-<body class="bg" style="background-color: {{ g.front_user.color }}">
-    <span id="mycolo" style="display: none;">{{ g.front_user.color }}</span>
-    <nav class="navbar navbar-default bg" style="background-color: {{ g.front_user.color }}">
+{% if g.user %}
+<body class="bg" style="background-color: {{ g.user.color }}">
+    <span id="mycolo" style="display: none;">{{ g.user.color }}</span>
+    <nav class="navbar navbar-default bg" style="background-color: {{ g.user.color }}">
     {% else %}
 <body class="bg">
 <nav class="navbar navbar-default bg" style="border-top: 0px;">
@@ -51,8 +51,8 @@
         <li class=""><a href="{{ url_for("user.index") }}"><i style="color: #9ce150"  class="layui-icon layui-icon-find-fill"></i>&nbsp;发现</a></li>
           <li class=""><a href="{{ url_for("user.index") }}"><i style="color: #e0e149" class="layui-icon layui-icon-group"></i>&nbsp;小组</a></li>
         <li class=""><a href="{{ url_for("user.index") }}"><i style="color: #8a9ffb" class="layui-icon layui-icon-picture"></i>&nbsp;相册</a></li>
-          {% if g.front_user %}
-{#                  <li class=""><a href="{{ url_for("front.chat",user_id = g.front_user.id) }}"><i style="color: #e188a8;font-size: 15px" class="mail icon"></i>&nbsp;私信</a></li>#}
+          {% if g.user %}
+{#                  <li class=""><a href="{{ url_for("front.chat",user_id = g.user.id) }}"><i style="color: #e188a8;font-size: 15px" class="mail icon"></i>&nbsp;私信</a></li>#}
                   <li class=""><a href="#"><i style="color: #e188a8;font-size: 15px" class="mail icon"></i>&nbsp;私信</a></li>
           {% endif %}
         <li class="dropdown">
@@ -73,7 +73,7 @@
                 <li><a href="#">
                     <span style="color: #8d89ee" class="glyphicon glyphicon-edit"></span>&nbsp;&nbsp;发帖
                 </a></li>
-                {% if g.front_user %}
+                {% if g.user %}
                     <li><a id="element_id">
                     <i class="dashboard icon"></i>&nbsp;&nbsp;主题
                 </a></li>
@@ -85,11 +85,11 @@
                     <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">
-                        <img src="{{ g.front_user.avatar }}" alt=""
+                        <img src="{{ g.user.avatar }}" alt=""
                              class="profile_img">
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">&nbsp;&nbsp;发布</a></li>
+                        <li><a href="#">&nbsp;&nbsp;发布</a><p6li>
                         <li><a href="#">&nbsp;&nbsp;我的主页</a></li>
                         <li><a href="#">&nbsp;&nbsp;设置</a></li>
                         <li role="separator" class="divider"></li>
@@ -97,8 +97,8 @@
                     </ul>
                 </li>
                     {% else %}
-                                    <li><a href="{{ url_for("user.login") }}"><span>登录</span></a></li>
-                                    <li><a href="{{ url_for("user.register") }}"><span>注册</span></a></li>
+                        <li><a href="{{ url_for("user.login") }}"><span>登录</span></a></li>
+                        <li><a href="{{ url_for("user.register") }}"><span>注册</span></a></li>
                     {% endif %}
             <li>
               <select  id="language" class="form-control"  style="float:right;margin-bottom: 10px;margin-top: 15px;">
